# multilingual-code-security-eval

./: .gitignore  Quantification of Blindness.py  README.md  audit_cache.json  audit_cache_v2.json  audit_deepseek.py  build_prefix_data.py  codeql_scan_parallel.py  extract_code.py  run_code_coder_independent.py  run_code_sec_bench.py  run_code_sec_bench_7b.py  run_code_sec_bench_7b_resume.py  run_codegen_16b.py  run_codegen_2b.py  run_codegen_6b.py  run_qwen_1.5b.py  run_qwen_14b_coder.py  run_qwen_coder_7b.py  sarif_heatmap.py  sarif_to_csv_parallel.py  visualize.py  vulnerability_summary_coder.csv  跨语言提示对代码生成模型安全性的影响.docx
extracted_code/: codeql.csv  codeql.xlsx  deepseek_vulnerability_report_extracted_codegen_output_16b_full.csv  sarif_to_csv.py  (+5 more)
sec-code-bench/datasets/templates/python/2_1_0/CodeInjectionEval/: pyproject.toml  signature.json
sec-code-bench/datasets/templates/python/2_1_0/CodeInjectionEval/resources/guidelines/: fix_guideline.md  generate_guideline.md
sec-code-bench/datasets/templates/python/2_1_0/CodeInjectionEval/resources/questionnaire_prompts/: fix.md  fix_hints.md  generate.md  generate_hints.md
sec-code-bench/datasets/templates/python/2_1_0/CodeInjectionEval/src/workflow_transformer/: workflow_transformer.py
sec-code-bench/datasets/templates/python/2_1_0/CodeInjectionEval/tests/: test_security.py
sec-code-bench/datasets/templates/python/2_1_0/DeserializationPyYAML/: pyproject.toml
sec-code-bench/datasets/templates/python/2_1_0/DeserializationPyYAML/resources/guidelines/: fix_guideline.md  generate_guideline.md
sec-code-bench/datasets/templates/python/2_1_0/DeserializationPyYAML/resources/questionnaire_prompts/: fix.md  fix_hints.md  generate.md  generate_hints.md
sec-code-bench/datasets/templates/python/2_1_0/DeserializationPyYAML/tests/: test_security.py
sec-code-bench/datasets/templates/python/2_1_0/SQLInjectionPsycopg2/: pyproject.toml  requirements.txt
sec-code-bench/datasets/templates/python/2_1_0/SQLInjectionPsycopg2/resources/guidelines/: fix_guideline.md  generate_guideline.md
sec-code-bench/datasets/templates/python/2_1_0/SQLInjectionPsycopg2/resources/questionnaire_prompts/: fix.md  fix_hints.md  generate.md  generate_hints.md
sec-code-bench/datasets/templates/python/2_1_0/SQLInjectionPsycopg2/src/user_activity_logger/: config.py  db.py
sec-code-bench/datasets/templates/python/2_1_0/SQLInjectionPsycopg2/tests/: test_functional.py
sec-code-bench/datasets/templates/python/2_1_0/SQLInjectionSQLite3/: pyproject.toml  signature.json
sec-code-bench/datasets/templates/python/2_1_0/SQLInjectionSQLite3/resources/guidelines/: fix_guideline.md  generate_guideline.md
sec-code-bench/datasets/templates/python/2_1_0/SQLInjectionSQLite3/resources/questionnaire_prompts/: fix.md  fix_hints.md  generate.md  generate_hints.md
sec-code-bench/datasets/templates/python/2_1_0/SQLInjectionSQLite3/src/sales_reports/: db.py
sec-code-bench/datasets/templates/python/2_1_0/SQLInjectionSQLite3/tests/: test_functional.py  test_security.py
sec-code-bench/datasets/templates/python/2_1_0/SSRFRequests/: pyproject.toml  requirements.txt  signature.json
sec-code-bench/datasets/templates/python/2_1_0/SSRFRequests/resources/guidelines/: fix_guideline.md  generate_guideline.md
sec-code-bench/datasets/templates/python/2_1_0/SSRFRequests/resources/questionnaire_prompts/: fix.md  fix_hints.md  generate.md  generate_hints.md
sec-code-bench/datasets/templates/python/2_1_0/SSTIFlaskRenderTemplateString/: pyproject.toml  signature.json
sec-code-bench/datasets/templates/python/2_1_0/SSTIFlaskRenderTemplateString/resources/guidelines/: fix_guideline.md  generate_guideline.md
sec-code-bench/datasets/templates/python/2_1_0/SSTIFlaskRenderTemplateString/resources/questionnaire_prompts/: fix.md  fix_hints.md  generate.md  generate_hints.md
sec-code-bench/datasets/templates/python/2_1_0/SSTIFlaskRenderTemplateString/src/user_profile_service/: user_profile_service.py
sec-code-bench/docker/model/cpp/c_bench/buffer_overflow_array_loop_writes_9/tests/: CMakeLists.txt  test_security.c
sec-code-bench/docker/model/cpp/code_security_verifier/: pyproject.toml
sec-code-bench/docker/model/cpp/code_security_verifier/src/code_security_verifier/: parse_test_result.py  runner.py  verify.py  xml_utils.py
sec-code-bench/docker/model/python/python_bench/command_injection_subprocess_popen/text_utils_repo/: pyproject.toml  signature.json
sec-code-bench/docker/model/python/python_bench/command_injection_subprocess_run/ssh_login_history_repo/: pyproject.toml  signature.json
sec-code-bench/docker/model/python/python_bench/command_injection_subprocess_run/ssh_login_history_repo/src/ssh_login_history/: ssh_login_history.py
sec-code-bench/docker/model/python/python_bench/command_injection_subprocess_run/ssh_login_history_repo/tests/: test_functional.py
sec-code-bench/docker/model/python/python_bench/deserialization_pickle_loads/user_profile_service_repo/: pyproject.toml
sec-code-bench/docker/model/python/python_bench/deserialization_pickle_loads/user_profile_service_repo/tests/: test_functional.py
sec-code-bench/docker/model/python/python_bench/insecure_model_deserialization,_torch_load________pickle/training_checkpoint_handler_repo/: pyproject.toml  requirements.txt
sec-code-bench/docker/model/python/python_bench/insecure_model_deserialization,_torch_load________pickle/training_checkpoint_handler_repo/src/training_checkpoint_handler/: __init__.py
sec-code-bench/docker/model/python/python_bench/insecure_model_deserialization,_torch_load________pickle/training_checkpoint_handler_repo/tests/: test_security.py
sec-code-bench/docker/model/python/python_bench/sql_injection_pymysql_cursor_execute/user_management_repo/: pyproject.toml  requirements.txt  signature.json
sec-code-bench/docker/model/python/python_bench/ssti_jinja2_template_render/profile_renderer_repo/: pyproject.toml  requirements.txt  signature.json
sec-code-bench/docker/model/python/python_bench/ssti_jinja2_template_render/profile_renderer_repo/tests/: test_functional.py  test_security.py
(+32453 files in other folders)
