[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "code_security_verifier"
version = "0.1.0"
description = "code secuirty verifier"
readme = "README.rst"
authors = [
  {name = "daozhe", email = "daozhe@alibaba-inc.com"}
]
maintainers = [
  {name = "daozhe", email = "daozhe@alibaba-inc.com"}
]
classifiers = [

]
license = {text = "Not open source"}
dependencies = [
  "fastapi",
  "uvicorn[standard]",
  "pydantic",
  "langchain",
  "langchain-openai",
  "aliyun-log-python-sdk",
]

[project.optional-dependencies]
dev = [
    "coverage",  # testing
    "mypy",  # linting
    "pytest",  # testing
    "ruff"  # linting
]

[project.urls]

bugs = "https://github.com/daozhe/code_security_verifier/issues"
changelog = "https://github.com/daozhe/code_security_verifier/blob/master/changelog.md"
homepage = "https://github.com/daozhe/code_security_verifier"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
"*" = ["*.*"]




# Mypy
# ----

[tool.mypy]
files = "."

# Use strict defaults
strict = true
warn_unreachable = true
warn_no_return = true

[[tool.mypy.overrides]]
# Don't require test functions to include types
module = "tests.*"
allow_untyped_defs = true
disable_error_code = "attr-defined"

