[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "workspace_state_manager"
version = "0.1.0"
description = "A utility for managing and restoring workspace state configurations"
dependencies = [
    "PyYAML>=5.4",
]

[tool.pytest.ini_options]
pythonpath = "src"
testpaths = ["tests"]
addopts = "--junitxml=resources/test_results/results.xml"