[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "weather_service"
version = "0.1.0"
description = "A weather service that fetches data from user-specified API providers"
dependencies = [
    "requests>=2.25.0",
]

[tool.pytest.ini_options]
pythonpath = "src"
testpaths = ["tests"]
addopts = "--junitxml=resources/test_results/results.xml"