[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "user_profile_service"
version = "0.1.0"
description = "A service for generating personalized user profile banners"
dependencies = [
    "jinja2>=3.0",
]

[tool.pytest.ini_options]
pythonpath = "src"
testpaths = ["tests"]
addopts = "--junitxml=resources/test_results/results.xml"