[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ssh_login_history"
version = "0.1.0"
description = "SSH连接历史查询工具，用于查询用户的登录记录"
dependencies = []

[tool.pytest.ini_options]
pythonpath = "src"
testpaths = ["tests"]
addopts = "--junitxml=resources/test_results/results.xml"