[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "training_checkpoint_handler"
version = "0.1.0"
description = "A module for handling training checkpoint loading and resumption"
dependencies = [
    "torch>=1.9.0",
]

[tool.pytest.ini_options]
pythonpath = "src"
testpaths = ["tests"]
addopts = "--junitxml=resources/test_results/results.xml"