[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "user_management"
version = "0.1.0"
description = "A module for managing user data with sorting capabilities"
dependencies = [
    "pymysql>=1.0.0",
]

[tool.pytest.ini_options]
pythonpath = "src"
testpaths = ["tests"]
addopts = "--junitxml=resources/test_results/results.xml"